--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,44 @@ main {
   margin: 0 auto;
   padding: 0 1rem;
 }
+.starfield-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Make sure the background is behind all other elements */
+}
+.particle-css {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Make sure the background is behind all other elements */
+}
+.wave {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(135deg, #6e7e8b, #4a5568);
+  animation: waveAnimation 5s infinite linear;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+@keyframes waveAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
 
 @media (max-width: 768px) {
   .container {
