--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,7 @@
 .footer {
     background: rgba(255, 255, 255, 0.05);
     padding: 4rem 0 0;
+    margin: 22px;
   }
   
   .footer-content {
@@ -13,6 +14,9 @@
   .footer-left h2 {
     font-size: 2rem;
     margin-bottom: 1rem;
+    display: flex;
+    justify-content: flex-start;
+    margin: -9px;
   }
   
   .footer-left p {
